# transmission-telegram-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-push.yml  release.yml
tg_trnsm_bot/: __main__.py  app.py  logger.py  utils.py
transmission-telegram-bot/: app.py  config.py  menus.py  utils.py
transmission_telegram_bot/: __main__.py  app.py  config.py  menus.py  utils.py
