[project]
name = "transmission-telegram-bot"
version = "0.1.0"
requires-python = ">=3.14, <4"
dependencies = [
    "pyngrok>=7.5.0",
    "transmission-rpc>=7.0.11",
    "python-telegram-bot>=22.5",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transmission-telegram-bot"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "T20",  # flake8-print
    "C90",  # flake8-complexity (mccabe)
    "UP",   # pyupgrade
    "RUF",  # ruff
    "S",    # flake8-bandit
]
ignore = [
    "A003",  # class attribute {name} is shadowing a python builtin
    "S101",  # use of assert detected
    "S104",  # possible binding to all interfaces (expected in Docker)
    "N999",  # invalid module name (dashes in directory name)
]
